[package]
name = "rbuffer"
version = "0.1.0"
edition = "2024"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3


[features]
default = []
std = []
profiling = []

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"


[[bench]]
name = "bench_spsc_rbuffer"
harness = false


[dependencies]
