[package]
name = "rbuffer"
version = "0.1.0"
edition = "2024"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3


[features]
default = []
std = []
profiling = []

[dev-dependencies]
criterion = "0.8.2"
core_affinity = "0.8.3"


[[bench]]
name = "spsc_bench"
harness = false

[[bench]]
name = "mpsc_bench"
harness = false


[dependencies]
