[package]
name = "rbuffer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

description = "Lock-free fixed-size SPSC and MPSC ring buffers for low-latency messaging."
license = "MIT"
repository = "https://github.com/aleexeyy/rbuffer"

readme = "README.md"
keywords = ["ring-buffer", "lock-free", "spsc", "mpsc", "no-std"]
categories = ["concurrency", "data-structures", "no-std"]
homepage = "https://github.com/aleexeyy/rbuffer"
exclude = [
    "benches/**",
    "src/bin/**",
    "target/**",
    ".cargo/**",
]


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3


[features]
default = []
std = []
profiling = []

[dev-dependencies]
criterion = "0.8.2"
core_affinity = "0.8.3"


[[bench]]
name = "spsc_bench"
harness = false

[[bench]]
name = "mpsc_bench"
harness = false


[dependencies]
